php artisan migrate - to connect database based on .env and database config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: "3.9"
 services:
+  # Configuration of MySQL server
   mysql:
     image: mariadb:10.8.3
     # Uncomment below when on Mac M1
